# dynamic-grasping

./: .gitmodules  README.md
dynamic_grasping_controller/: CMakeLists.txt  package.xml
dynamic_grasping_controller/config/: dynamic_planning_params.yaml
dynamic_grasping_controller/include/dynamic_grasping_controller/: dynamic_grasping_manager_node.hpp  gripper_planner_node.hpp  trajectory_planner_node.hpp  trajectory_point.hpp  trajectory_utils.hpp  widowx_kinematics_library.hpp
dynamic_grasping_controller/launch/: dynamic_grasping.launch.py
dynamic_grasping_controller/scripts/: fake_object_publisher.py  visualize_trajectory.py
dynamic_grasping_controller/src/: dynamic_grasping_manager_node.cpp  ee_pose_publisher_node.cpp  gripper_planner_node.cpp  trajectory_planner_node.cpp  trajectory_utils.cpp  velocities_publisher_node.cpp  widowx_kinematics_library.cpp
interbotix_ros_core/: .gitmodules
interbotix_ros_core/.github/workflows/: slate-humble.yaml
interbotix_ros_core/interbotix_ros_slate/interbotix_slate_driver/: CMakeLists.txt  package.xml
interbotix_ros_core/interbotix_ros_slate/interbotix_slate_driver/include/interbotix_slate_driver/: slate_base.hpp
interbotix_ros_core/interbotix_ros_slate/interbotix_slate_driver/src/: slate_base.cpp  slate_base_node.cpp
interbotix_ros_core/interbotix_ros_xseries/interbotix_xs_driver/src/: xs_driver.cpp
interbotix_ros_core/interbotix_ros_xseries/interbotix_xs_sdk/scripts/: xs_sdk_sim.py
interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_diagnostic_tool/config/: modes.yaml
interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_pid/: CMakeLists.txt
interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_pid/include/interbotix_xsarm_pid/: pos_vel_pid.h
interbotix_ros_manipulators/interbotix_ros_xsarms/examples/interbotix_xsarm_pid/src/: pos_vel_pid.cpp
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_control/launch/: xsarm_control.launch.py
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_descriptions/launch/: xsarm_description.launch.py
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_descriptions/urdf/: control.urdf.xacro  gazebo_configs.urdf.xacro  wx250s.urdf.xacro
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/config/: modes.yaml
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/config/srdf/: wx250s.srdf.xacro
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/launch/: xsarm_moveit.launch.py
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_ros_control/config/controllers/: wx250s_controllers.yaml
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_ros_control/launch/: xsarm_ros_control.launch.py
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_sim/config/trajectory_controllers/: wx250s_trajectory_controllers.yaml
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_sim/launch/: xsarm_gz_classic.launch.py
interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_common_sim/worlds/: simple.world
mocap4ros2_optitrack/mocap4r2_optitrack_driver/: CMakeLists.txt  package.xml
mocap4ros2_optitrack/mocap4r2_optitrack_driver/config/: mocap4r2_optitrack_driver_params.yaml  velocity_estimator_params.yaml
mocap4ros2_optitrack/mocap4r2_optitrack_driver/include/mocap4r2_optitrack_driver/: vel_estimator_node.hpp
mocap4ros2_optitrack/mocap4r2_optitrack_driver/launch/: optitrack2.launch.py
mocap4ros2_optitrack/mocap4r2_optitrack_driver/src/: rigid_body_publisher_node.cpp  vel_estimator_node.cpp
mocap4ros2_optitrack/mocap4r2_optitrack_driver/src/mocap4r2_optitrack_driver/: mocap4r2_optitrack_driver.cpp
wx250s_bringup/: CMakeLists.txt  package.xml
wx250s_bringup/config/: sleep_joint_states.yaml
wx250s_bringup/launch/: cart_cylinder_sim.launch.py  cart_cylinder_slope_sim.launch.py  hardware_grasping.launch.py
wx250s_bringup/meshes/: wedge_3m_0.2m_7pct.stl
wx250s_bringup/msg/: ObjectState.msg
wx250s_bringup/rviz/: wx250s_cart_view.rviz
wx250s_bringup/src/: fake_relative_object_state_publisher.cpp  relative_object_state_publisher.cpp
wx250s_bringup/urdf/: ball.urdf.xacro  cart.urdf.xacro  cube.urdf.xacro  cylinder.urdf.xacro  slope.urdf.xacro  visual_cylinder.urdf.xacro
