<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wx250s_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sughetto@todo.todo">sughetto</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <!-- Keep exec_depend tags for packages only needed at runtime -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>moveit_resources</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>interbotix_xsarm_descriptions</exec_depend>
  <exec_depend>interbotix_xsarm_ros_control</exec_depend>
  <exec_depend>interbotix_xsarm_moveit</exec_depend>
  <exec_depend>interbotix_common_sim</exec_depend>
  <exec_depend>interbotix_xs_modules</exec_depend>
  <exec_depend>interbotix_xs_sdk</exec_depend>
  <exec_depend>interbotix_xsarm_sim</exec_depend>
  <exec_depend>interbotix_xsarm_control</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>  <!-- Added for cart control -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- Use depend tag for packages needed at both build and runtime -->
  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- This tag must be outside the export tag to be properly recognized -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
